[gd_scene load_steps=7 format=3 uid="uid://d3nhs1hnbjbum"]

[ext_resource type="FontFile" uid="uid://cnv2p7n8e175w" path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" id="1_k8q8d"]
[ext_resource type="Script" path="res://luke/scripts_luke/intro.gd" id="1_rj70f"]
[ext_resource type="Texture2D" uid="uid://besjdvn1mt2gr" path="res://luke/assets_luke/left_mouse.png" id="3_pge4q"]

[sub_resource type="Animation" id="Animation_br21l"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mouse click:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mouse click:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mouse click:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mouse click:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_hwtlg"]
resource_name = "mouse_pulse"
length = 4.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mouse click:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("mouse click:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("mouse click:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("mouse click:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.470588, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yatjs"]
_data = {
"RESET": SubResource("Animation_br21l"),
"mouse_pulse": SubResource("Animation_hwtlg")
}

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rj70f")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Label0" type="Label" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = -107.5
offset_right = 556.0
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 22
theme_override_fonts/font = ExtResource("1_k8q8d")
theme_override_font_sizes/font_size = 80
text = "I’d been travelling for days.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label1" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = -107.5
offset_right = 556.0
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 22
theme_override_fonts/font = ExtResource("1_k8q8d")
theme_override_font_sizes/font_size = 50
text = "I hadn’t been back to my village for years,
but I knew it wouldn’t have changed much. "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -729.5
offset_top = -97.5
offset_right = 729.5
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 22
theme_override_fonts/font = ExtResource("1_k8q8d")
theme_override_font_sizes/font_size = 50
text = "I’ve heard people say their childhood home feels smaller
when they return as adults, but I’ve never felt that way. "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -729.5
offset_top = -109.5
offset_right = 729.5
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 18
theme_override_fonts/font = ExtResource("1_k8q8d")
theme_override_font_sizes/font_size = 50
text = "My parents house, sure, but then again,
that always seemed small, even when I was a kid.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -729.5
offset_top = -99.5
offset_right = 729.5
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 18
theme_override_fonts/font = ExtResource("1_k8q8d")
theme_override_font_sizes/font_size = 50
text = "As for the forests and hills surrounding it,
well they never felt small, especially when I was a kid."
horizontal_alignment = 1
vertical_alignment = 1

[node name="mouse click" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -226.0
offset_right = -110.0
offset_bottom = -106.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_pge4q")

[node name="MouseAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yatjs")
}

[node name="skipBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -155.0
offset_right = 30.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_k8q8d")
theme_override_font_sizes/font_size = 30
text = "skip"

[node name="Cover" type="ColorRect" parent="."]
auto_translate_mode = 1
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[connection signal="pressed" from="skipBtn" to="." method="_on_skip_btn_pressed"]
